shared/style.css
#tip{
 position : absolute;
 border : 1px solid gray;
 background-color : #efefef;
 padding : 3px;
 z-index: 1000;
 /* set this to create word wrap */
 max-width: 200px;
}

body {
  font-family: Palatino, Verdana, Times New Roman, Helvetica, sans-serif;
  font-size: 100%;
  color: #eae2c4;
}

.banner {
  position: absolute;
  left: 20px;
  top: 20px;
  color: #eae2c4; #9C957C;
}

.home_image {
  position: absolute;
  left: 180px;
  top: 300px;  
}
.map_overlay {
  position: absolute;
  left: -1px;
  top: 1px;  
}

#title {
  font-size: 150%;
}
#subtitle {
  position: relative;
  top: 2px;
  left: 4px;
  font-size: 90%;
}
#links {
  position: relative;
  top: 6px;
  left: 4px;
  font-size: 80%;
}

.text_block {
  position: absolute;
  left: 180px;
  width: 700px;
  top: 220px;
  font-size: 95%;
}

.search {
  position: absolute;
  left: 465px;
  top: 23px;
  font-size: 75%;
}
.input_keywords {
  color: #eae2c4;
  background: black; 
  border: 1px solid #929687
}
.select_cave {
  color: #eae2c4;
  background: black; 
  border: 1px outset #929687
} 
.submit_query {
  color: #eae2c4;
  background: black; 
  border: 1px outset #929687
} 

.miniplans {
  position: absolute;
  left: 10px;
  top: 300px;
}
.miniplan_title {
  position: relative;
  left: 35px;
  font-size: 90%;
}

.plan {
  position: absolute;
  top: 270px;
}
.plan_title {
  position: absolute;
  left: 270px;
  top: 760px;
  font-size: 110%;
}
.no_plan_title {
  position: absolute;
  left: 150px;
  top: 500px;
  font-size: 110%;
}

.slidebox {
  position: absolute;
  top: 220px;
  left: 530px;
}
#slides {
  position: absolute;
  bottom: 0px;
}
#slides_dummy {
  position: absolute;
  bottom: 0px;
}
.caption {
  position: absolute;
  bottom: 0px;
  left: 370px;
  font-size: 85%;
  width: 300px;
}

.tiny { 
  font-size: 50%;
}

.thumbnails {
  position: absolute;
  left: 100px;
  font-size: 90%;
}

a:link {
  color: #487a14;
  #color: #4D6FAC; #487a14;
  text-decoration: none;
}
a:visited {
  color: #487a14;
  #color: #4D6FAC; #487a14;
  text-decoration:none;
}
a:hover {
  color: #6ebd20;
  #color: #0147FA; #6ebd20;
  text-decoration:none;
}
a:active {
  color: #6ebd20;
  #color: #0147FA; #6ebd20;
  text-decoration:none;
}

